feature(agent): remove unrequired driver spec as reported in the code review

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -96,10 +96,7 @@ spec:
             - name: SYSDIG_BPF_PROBE
               value:
           {{- end }}
-          {{- if (include "agent.universalEbpfEnforced" .) }}
-            - name: SYSDIG_AGENT_DRIVER
-              value: universal_bpf
-          {{- else if (include "agent.legacyEbpfEnforced" .) }}
+          {{- if (include "agent.legacyEbpfEnforced" .) }}
             - name: SYSDIG_AGENT_DRIVER
               value: legacy_bpf
           {{- end }}
