--- a/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
@@ -36,19 +36,6 @@ rules:
 - apiGroups:
     - ""
   resources:
-    - "pods"
-    - "pods/exec"
-  verbs:
-    - "create"
-- apiGroups:
-    - ""
-  resources:
-    - "pods"
-  verbs:
-    - "delete"
-- apiGroups:
-    - ""
-  resources:
     - configmaps
     - endpoints
     - nodes
@@ -87,6 +74,10 @@ rules:
     - config.openshift.io
   resources:
     - clusteroperators
+    - apiservers
+    - oauths
+    - networks
+    - images
   verbs:
     - get
 - apiGroups:
