feat(admission-controller,cluster-scanner,registry-scanner,cloud-connector,node-analyzer,rapid-response): update maintainers

--- a/charts/admission-controller/Chart.yaml
+++ b/charts/admission-controller/Chart.yaml
@@ -2,21 +2,13 @@ apiVersion: v2
 name: admission-controller
 description: Sysdig Admission Controller using Sysdig Secure inline image scanner
 type: application
-version: 0.12.2
+version: 0.12.3
 appVersion: 3.9.26
 home: https://sysdiglabs.github.io/admission-controller/
 icon: https://avatars.githubusercontent.com/u/5068817?s=200&v=4
 maintainers:
-  - name: hayk99
-    email: hayk.kocharyan@sysdig.com
-  - name: wideawakening
-    email: irune.prado@sysdig.com
-  - name: tembleking
-    email: fede.barcelona@sysdig.com
-  - name: miketnt
-    email: miguel.baztan@sysdig.com
-  - name: jprieto92
-    email: javier.prieto@sysdig.com
+  - name: giuse-sysdig
+    email: giuseppe.esposito@sysdig.com
 dependencies:
   - name: common
     # repository: https://charts.sysdig.com
