clusterrole cleanup for node-analyzer - togglers condition updated to "and"

--- a/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
+++ b/charts/node-analyzer/templates/clusterrole-node-analyzer.yaml
@@ -87,7 +87,7 @@ rules:
   verbs:
     - get
     - list
-{{- if or .Values.nodeAnalyzer.benchmarkRunner.includeSensitivePermissions .Values.nodeAnalyzer.benchmarkRunner.deploy }}
+{{- if and .Values.nodeAnalyzer.benchmarkRunner.includeSensitivePermissions .Values.nodeAnalyzer.benchmarkRunner.deploy }}
 - apiGroups:
     - ""
   resources:
