--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -1,3 +1,18 @@
+{{- if (include "cluster-scanner.accessKeySecret" .) }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "cluster-scanner.fullname" . }}
+  namespace: {{ include "cluster-scanner.namespace" . }}
+  labels:
+    {{- include "cluster-scanner.labels" . | nindent 4 }}
+type: Opaque
+data:
+  js_server_password: {{ .Values.runtimeStatusIntegrator.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
+{{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
+  cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
+{{- end }}
+{{- else }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,6 +26,7 @@ data:
   js_server_password: {{ .Values.runtimeStatusIntegrator.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
 {{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
   cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
+{{- end }}
 {{- end }}
 {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
 ---
