--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -60,3 +60,34 @@ tests:
     asserts:
       - isNull:
           path: data.cache_redis_password
+
+---
+suite: deployment
+templates:
+  - ../templates/deployment.yaml
+values:
+  - ../values.yaml
+release:
+  name: test-release
+  namespace: test-ns
+tests:
+  - it: "External secret env is set"
+    set:
+      global.sysdig.accessKeySecret: "secret"
+    asserts:
+      - equal:
+          path: spec.template.spec.containers[0].env[31]
+          value:
+            name: SYSDIG_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                key: access-key
+                name: secret
+      - equal:
+          path: spec.template.spec.containers[1].env[5]
+          value:
+            name: SYSDIG_ACCESS_KEY
+            valueFrom:
+              secretKeyRef:
+                key: access-key
+                name: secret
