Changed secret.yaml if statement
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>

--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -1,4 +1,3 @@
-{{- if (include "cluster-scanner.accessKeySecret" .) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,25 +7,12 @@ metadata:
     {{- include "cluster-scanner.labels" . | nindent 4 }}
 type: Opaque
 data:
-  js_server_password: {{ .Values.runtimeStatusIntegrator.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
-{{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
-  cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
-{{- end }}
-{{- else }}
-apiVersion: v1
-kind: Secret
-metadata:
-  name: {{ include "cluster-scanner.fullname" . }}
-  namespace: {{ include "cluster-scanner.namespace" . }}
-  labels:
-    {{- include "cluster-scanner.labels" . | nindent 4 }}
-type: Opaque
-data:
+{{- if not ( include "cluster-scanner.accessKeySecret" . ) }}
   sysdig_access_key: {{ required "please provide a sysdig access key" .Values.global.sysdig.accessKey | b64enc | quote }}
+{{- end }}
   js_server_password: {{ .Values.runtimeStatusIntegrator.natsJS.password | default (randAlphaNum 32) | b64enc | quote }}
 {{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
   cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
-{{- end }}
 {{- end }}
 {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
 ---
