--- a/charts/agent/Chart.yaml
+++ b/charts/agent/Chart.yaml
@@ -5,7 +5,7 @@ description: Sysdig Monitor and Secure agent
 type: application
 
 # currently matching sysdig 1.14.32
-version: 1.13.3
+version: 1.13.4
 
 appVersion: 12.16.0
 
@@ -36,4 +36,4 @@ dependencies:
   - name: common
     # repository: https://charts.sysdig.com
     repository: file://../common
-version: 1.13.3~1.1.1
+    version: ~1.1.0
