Expand 'KSPM AC' to 'KSPM Admission Controller'

--- a/charts/admission-controller/values.yaml
+++ b/charts/admission-controller/values.yaml
@@ -73,7 +73,7 @@ sysdig:
   # Overrides the `global.sysdig.secureAPIToken` parameter.
   secureAPIToken: ""
 
-  # **required for KSPM AC**
+  # **required for KSPM Admission Controller**
   # <br/>Access Key to access Sysdig Secure.
   # <br/><br/>Either this value or `sysdig.existingAccessKeySecret` is required
   # Overrides `global.sysdig.accessKey`
